--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@
         <h4>12 Memorable Fashion Month Moments</h4></div>
       </div>
       <div class="refer">
+        <div class="text two columns">
         <p class="kicker">Opinion</p>
-        <h4>The Closed Factories of the Deep South</h4>
+        <h4>The Closed Factories of the Deep South</h4></div>
       </div>
       <div class="refer">
         <div class="text two columns">
