--- a/index.html
+++ b/index.html
@@ -203,11 +203,12 @@
       </div>
     </div>
   </div>
+</div>
   </div> <!-- end container -->
 <br>
 <br>
 <br>
-  <div class="text twelve columns">
+  <div class="row">
   <div class="footer">
     <div class="text" style=" text-align:center;">
     <h5>&copy; 2015 J-360</h5></div></div>
